SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Address__c.field-meta.xml
<CustomField>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>