SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>TextArea</type>
    </CustomField>