SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>