SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Domain__c.field-meta.xml
<CustomField>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>