SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Event_Type_ID__c.field-meta.xml
<CustomField>
        <fullName>Event_Type_ID__c</fullName>
        <label>Event Type ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>