SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Number_of_RSVPs__c.field-meta.xml
<CustomField>
        <fullName>Number_of_RSVPs__c</fullName>
        <label>Number of RSVPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>