SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Splash_Created_At_c__c.field-meta.xml
<CustomField>
        <fullName>Splash_Created_At_c__c</fullName>
        <label>Splash_Created_At__c</label>
        <type>DateTime</type>
    </CustomField>