SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Splash_Event_Account__c.field-meta.xml
<CustomField>
        <fullName>Splash_Event_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Splash Events</relationshipLabel>
        <relationshipName>Splash_Events</relationshipName>
        <type>Lookup</type>
    </CustomField>