SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Splash_Modified_At_c__c.field-meta.xml
<CustomField>
        <fullName>Splash_Modified_At_c__c</fullName>
        <label>Splash_Modified_At__c</label>
        <type>DateTime</type>
    </CustomField>