SFUSA/force-app/main/default/objects/Splash_Events__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>